# ads-bazaar-contract

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.md
.github/workflows/: ci.yml
contracts/campaign-escrow/: Cargo.toml
contracts/campaign-escrow/src/: error.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/dispute-resolution/: Cargo.toml
contracts/dispute-resolution/src/: error.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
docs/: ARCHITECTURE.md
