[package]
name = "ads-bazaar-dispute-resolution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dispute arbitration contract for contested campaign-escrow payouts"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
ads-bazaar-shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
